[acquirer-backed] Add OpenAPI Spec Doc for Filtering parameters in GET /merchants
